# cinnamon

./: Cargo.toml  rfc.txt
src/: clients.rs  config.rs  ipparser.rs  lib.rs  main.rs  replies.rs  requests.rs  server.rs
src/tests/: clients.rs
