[package]
name = "cinnamon"
version = "0.1.0"
authors = ["jorge4larcon <jorge4larcon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
regex = "1.3.1"
serde_json = "1.0.41"
fern = { version = "0.5.8", features = ["colored"] }
log = "0.4"
chrono = "0.4"
